# audio-seg-data-synth

./: .gitignore  detection_music_speech.ipynb
Cortes_music_nmusic/139850/: 139850-hyphotesis-processed.txt  139850-local.txt  139850-reference_processed.txt  139850.txt  139850_EDICAO.csv
Cortes_music_nmusic/145687/: 145687.txt  145687_EDICAO.csv  145687_corte_m_nm.txt
key/: 139850_corte1.txt
models/: doMusicAndSpeechDetection.ipynb  doMusicAndSpeechDetection.py  inference.ipynb  metrics.ipynb  musicspeech_class.py  musicspeech_controller.py  musicspeech_params.py  save_model.ipynb
models/cia-ev-metrics/: README.md  pyproject.toml
models/cia-ev-metrics/cia/ev/metrics/: identification.py  metrics_controller.py  musicannotation.py  segmentation.py  uemsupport.py
models/cia-ev-metrics/cia/ev/metrics/util/: log_handler.py
models/onxx/: model2b.onnx
models/tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
openvino-server/: config.json  dockerfile
openvino-server/models/music-detection/1/variables/: variables.index
triton-server/: dockerfile
triton-server/model_repository/music-detection/: config.pbtxt
triton-server/model_repository/music-detection/1/model.savedmodel/: saved_model.pb
triton-server/model_repository/music-detection/1/model.savedmodel/variables/: variables.data-00000-of-00001
triton-server/model_repository/musicdetection/: config.pbtxt
triton-server/model_repository/musicdetection/1/model.savedmodel/: fingerprint.pb  keras_metadata.pb  saved_model.pb
(+1 files in other folders)
